--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "homepage": "https://github.com/kunyan/react-bootstrap-xeditable#readme",
   "peerDependencies": {
-    "react": ">=16.4.1",
     "react-dom": ">=16.4.1"
   },
   "devDependencies": {
@@ -40,9 +39,9 @@
     "@types/enzyme-to-json": "^1.5.2",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.7",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-test-renderer": "^16.0.3",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.2",
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-server": "^3.1.1",
     "enzyme": "^3.7.0",
@@ -82,5 +81,6 @@
       "ts",
       "tsx"
     ]
-  }
+  },
+  "dependencies": {}
 }
